--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'junit:junit:4.12'
+    compile 'org.mockito:mockito-core:1.10.19'
     compile "org.jetbrains.anko:anko-sqlite:$anko_version"
 }
 repositories {
